<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChiChi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ChiChi_Copyright">ChiChi, SJTU</string>
    <string name="middot">·</string>
    <string name="loading_text">Loading……</string>
    <string name="descriptionHeader">Description</string>
    <string name="tasteHeader">Taste</string>

    <string name="disconnected">Network disconnected</string>
    <string name="disconnectedMessage">Please check your data network settings.</string>

    <string name="confirmButton">Confirm</string>
    <string name="mapHeader">Map</string>

</resources>
