<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!--<LinearLayout
            android:id="@+id/thumbnail_wrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dip">

        <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/c1"
                android:contentDescription="@string/app_name"/>

    </LinearLayout>-->
    <RelativeLayout
            android:id="@+id/name_wrap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"
            android:paddingBottom="10dp">

        <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="1"
                android:textSize="36sp"
                android:textColor="#FFFFFF"
                android:layout_alignParentBottom="true"
                android:shadowColor="#444444"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                />
        <!--
    <edu.SJTU.ChiChi.views.VerticalTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:lineSpacingMultiplier="1.3"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true"/>
             -->
        <TextView
                android:id="@+id/building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/name"
                android:layout_alignBottom="@+id/name"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:shadowColor="#444444"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"/>

        <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/building"
                android:layout_alignBottom="@+id/name"
                android:textSize="24sp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/middot"
                android:textColor="#FFFFFF"
                android:shadowColor="#444444"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant"
                android:layout_toRightOf="@+id/dot"
                android:layout_alignBottom="@+id/name"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:shadowColor="#444444"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"/>

        <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="84sp"
                android:layout_toRightOf="@+id/name"
                android:layout_above="@+id/building"
                android:textColor="#FFFFFF"
                android:shadowColor="#444444"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/copyright_wrap"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

            <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:id="@+id/cc_logo"
                    android:src="@drawable/cc_logo"
                    android:contentDescription="@string/app_name"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="3dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/copyright"
                    android:text="@string/ChiChi_Copyright"
                    android:textSize="12sp"
                    android:textColor="#FFFFFF"/>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
            android:id="@+id/content_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/name_wrap">

        <RelativeLayout
                android:id="@+id/row_wrap_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#50333333"
                android:padding="10dp"
                android:minHeight="100dp"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/tasteHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tasteHeader"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

            <ImageView
                    android:id="@+id/row_wrap_0_h_line_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/h_line"
                    android:contentDescription="@string/app_name"
                    android:layout_below="@+id/tasteHeader"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>


            <TextView
                    android:id="@+id/taste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="#FFFFFF"
                    android:text="鲜香咸"
                    android:textSize="40sp"
                    android:layout_alignBottom="@+id/genre"
                    android:layout_below="@+id/row_wrap_0_h_line_0"/>

            <edu.SJTU.ChiChi.views.VerticalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="徽菜"
                    android:id="@+id/genre"
                    android:textSize="60sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="70dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@+id/row_wrap_0_h_line_0"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/row_wrap_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#50333333"
                android:padding="10dp"
                android:minHeight="100dp"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/descriptionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionHeader"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />

            <ImageView
                    android:id="@+id/row_wrap_1_h_line_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/h_line"
                    android:contentDescription="@string/app_name"
                    android:layout_below="@+id/descriptionHeader"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_below="@+id/row_wrap_1_h_line_0"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#50333333"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/row_wrap_2">

            <TextView
                    android:id="@+id/mapHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mapHeader"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />

            <ImageView
                    android:id="@+id/row_wrap_2_h_line_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/h_line"
                    android:contentDescription="@string/app_name"
                    android:layout_below="@+id/mapHeader"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            <fragment
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:name="com.google.android.gms.maps.MapFragment"
                    map:mapType="hybrid"
                    map:cameraTargetLat="31.0224442"
                    map:cameraTargetLng="121.4359062"
                    map:cameraZoom="15"
                    android:layout_below="@+id/row_wrap_2_h_line_0"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#50333333"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/row_wrap_3"
                android:gravity="center_vertical|center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ad"
                    android:text="欢迎加入吃吃！发送短信到18616800000"
                    android:textColor="#FFFFFF"
                    android:linksClickable="true"
                    android:autoLink="phone|email|web"
                    />
        </RelativeLayout>

    </LinearLayout>

    <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refreshButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/default_ptr_rotate"
            android:contentDescription="@string/app_name"/>-->

</RelativeLayout>